--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
-config.ini 
+fits_manager_config.ini 
 .vscode/
 fits_header_import_config.ini
 # User-specific files
